(fix): word wrapping for long words

--- a/plugins/Messenger/app/messenger.scss
+++ b/plugins/Messenger/app/messenger.scss
@@ -223,6 +223,7 @@ minds-messenger{
         box-sizing: border-box;
         line-height: 14px;
         text-align:left;
+        word-break: break-word;
       }
       .m-messenger-conversation-messages-message{
         text-align:right;
